--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker Donaciones Pocket Ants v1.3.13</title>
+    <title>Tracker Donaciones Pocket Ants v1.3.14</title>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -648,21 +648,35 @@
         }
 
         .btn-save {
-            background: linear-gradient(135deg, #28a745 0%, #34ce57 100%);
-            width: clamp(36px, 9vw, 40px);
-            height: clamp(36px, 9vw, 40px);
-            border-radius: 50%;
-            font-size: clamp(18px, 5vw, 20px);
-            padding: 0;
-            gap: 0;
+            background: linear-gradient(135deg, #1e7e34 0%, #28a745 100%);
+            padding: clamp(8px, 2vw, 10px) clamp(12px, 3vw, 16px);
+            border-radius: clamp(10px, 2.5vw, 12px);
+            color: white;
+            font-weight: 700;
+            text-align: center;
             display: flex;
             align-items: center;
             justify-content: center;
-            flex: none;
-            color: white;
-            font-weight: bold;
-            min-height: unset;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+            gap: 8px;
+            font-size: clamp(12px, 2.8vw, 15px);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            min-height: clamp(32px, 8vw, 40px);
+            box-shadow: 0 4px 12px rgba(40, 167, 69, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            flex: 1.2; /* Hacerlo un poco más ancho que el resto */
+            min-width: 0;
+            white-space: nowrap;
+        }
+
+        .btn-save:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(40, 167, 69, 0.4);
+            background: linear-gradient(135deg, #218838 0%, #2ecc71 100%);
+        }
+
+        .btn-save:active {
+            transform: scale(0.95);
         }
 
         .btn-sync {
@@ -1144,7 +1158,7 @@
             <div class="header-subtitle" id="headerLastUpdate">
                 Última actualización: Cargando...
             </div>
-            <div class="version-tag">v1.3.13</div>
+            <div class="version-tag">v1.3.14</div>
         </div>
 
         <!-- Botones de acción -->
@@ -1165,7 +1179,10 @@
             </button>
             <button class="btn btn-help" onclick="showInfo()" title="Ver guía de usuario">?</button>
             <button class="btn-save" id="saveBtn" onclick="manualSave()"
-                title="Guardar tabla y cerrar semana">✓ Guardar</button>
+                title="Guardar tabla y cerrar semana">
+                <span style="font-size: 1.2em;">✅</span>
+                <span>Guardar Cierre</span>
+            </button>
 
             <button class="btn btn-edit-mode" id="editModeBtn" onclick="toggleEditMode()" style="display:none;"
                 title="Modo Edición">📝</button>
